<resources>
    <string name="app_name">Bori</string>
    <string name="bori">보리</string>
    <string name="bori_news">보리뉴스</string>

    <string name="element_text">eletemnet text</string>

    <string name="no_connection">네트워크가 연결되지 않았습니다.</string>
    <string name="server_error">서버에 문제가 생겼습니다.</string>
    <string name="connection_error">네트워크 혹은 서버에 연결되지 않았습니다.</string>
    <string name="no_news">뉴스를 찾지 못했습니다.</string>

    <string name="nav_head_news">주요뉴스</string>
    <string name="nav_rcmd_news">맞춤뉴스</string>
    <string name="nav_fav">관심뉴스</string>
    <string name="news_list">전체뉴스</string>
    <string name="nav_font_size">글씨크기</string>
    <string name="nav_logout">로그아웃</string>
    <string name="nav_stat">통계</string>

    <string name="news_topic">뉴스토픽</string>
    <string name="news_saved">저장된 뉴스</string>


    <string name="dlg_head_news">주요뉴스를 검색 중 입니다.</string>

    <string name="font_middle">보통</string>
    <string name="font_large">크게</string>
    <string name="font_xlarge">아주크게</string>

    <string name="btn_pos">확인</string>
    <string name="btn_neg">취소</string>

    <string name="archived_label">Archived</string>
    <string name="undo_label">
        <u>Undo</u>
    </string>
    <string name="delete">삭제</string>
    <string name="unde">삭제취소</string>

    <string name="app_share">앱 공유하기</string>
    <string name="setting">설정</string>

    <string name="news_share">공유하기</string>
    <string name="news_bookmark">저장하기</string>
    <string name="news_source">브라우저로 보기</string>
    <string name="news_biz">언론사로 이동</string>
    <string name="news_remove">삭제하기</string>
    <string name="original_sns">관련 SNS보기</string>

    <string name="toast_bookmark_success">저장 되었습니다.</string>
    <string name="toast_bookmark_already">이미 저장 되었습니다.</string>

    <string name="sort_standard">정렬 기준</string>
    <string name="sort_sim">관련도 정렬</string>
    <string name="sort_sns">관련SNS 정렬</string>

    <string name="tab_today">오늘</string>
    <string name="tab_week">지난 7일</string>

    <string name="bori_alg">BORI ALGORITHM</string>

    <string name="chosun_ilbo">조선일보</string>
    <string name="chosun_biz">조선비즈</string>
    <string name="asia_econ">아시아경제</string>
    <string name="yeon_hap">연합뉴스TV</string>
    <string name="money_today">머니투데이</string>
    <string name="han_geore">한계레</string>
    <string name="e_daily">이데일리</string>
    <string name="joong_ang">중앙일보</string>
    <string name="huff_post">허핑턴포스트</string>

    <string name="no_saved_news">오늘 저장된 뉴스가 없습니다.</string>
    <string name="no_today_news">오늘 읽은 뉴스가 없습니다.</string>
    <string name="no_week_today_news">지난 7일간 읽은 뉴스가 없습니다.</string>
    <string name="no_week_saved_news">지난 7일간 저장된 뉴스가 없습니다.</string>
    <string name="show_more">전체 뉴스 보기</string>

    <string name="dark_theme">어두운 테마</string>
    <string name="key_dark">darkTheme</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_fav">Favorite</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_web_view">WebViewActivity</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_user_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="default_notification_channel_id">notification_channel_id</string>
</resources>
