<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context = ".activity.MainActivity"

>


    <item
            android:id="@+id/btm_nav_rmcd_news"
            android:icon="@drawable/ic_user_profile_grey"
            android:title="@string/nav_rcmd_news"

    />
    <item
            android:id="@+id/btm_nav_head_news"
            android:icon="@drawable/ic_rss_grey"
            android:title="@string/nav_head_news"
    />

     <item
            android:id="@+id/btm_nav_fav"
            android:icon="@drawable/ic_biz_collection_grey"
            android:title="@string/nav_fav"/>
     <item
            android:id="@+id/btm_nav_stat"
            android:icon="@drawable/ic_stat_grey"
            android:title="@string/nav_stat"/>


</menu>
