<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_fav"
        android:title="@string/action_fav"
        android:icon="@drawable/ic_star_border_white_24dp"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_menu_share"
        app:showAsAction="always"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
        />

    <item
       android:id="@+id/action_refresh"
       android:title="@string/action_refresh"
       android:icon="@drawable/ic_autorenew_white_24dp"
       app:showAsAction="always"
       />


</menu>