<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:padding="20dp"
>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
    >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/sort_standard"
                android:layout_alignParentLeft="true"
        />

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/sort_sim_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:padding="15dp"
            android:foreground="?android:attr/selectableItemBackground"

    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/sort_sim"
                android:textSize="16dp"
                android:textColor="#000000"
                android:layout_gravity="center"
        />


        <ImageView
                android:id="@+id/check_sim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_done_grey"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:visibility="invisible"
        />

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/sort_sns_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            android:layout_marginLeft="10dp"
            android:foreground="?android:attr/selectableItemBackground"

    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/sort_sns"
                android:textSize="16dp"
                android:textColor="#000000"
                android:layout_gravity="center"
        />


        <ImageView
                android:id="@+id/check_sns"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_done_grey"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
        />

    </RelativeLayout>




</LinearLayout>