<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="15dp"

    >

         <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/user_profile_pic"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        app:civ_border_width="1dp"
                        app:civ_border_color="@android:color/transparent"
                        app:srcCompat="@android:drawable/sym_def_app_icon"
                        tools:src="@drawable/ic_user_profile_black"

                />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/user_profile_pic"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
        >


            <TextView
                    android:id="@+id/bottom_sheet_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    tools:text="Eungjun Lee"
            />

            <TextView
                    android:id="@+id/bottom_sheet_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="eugene204@gmail.com"
            />

        </LinearLayout>

    </RelativeLayout>
    
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divier" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
    >


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
        >

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_share_black"
                    android:layout_gravity="center"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/app_share"
                    android:layout_gravity="center"
            />

        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
        >

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_setting_black"
                    android:layout_gravity="center"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/setting"
                    android:layout_gravity="center"
            />

        </LinearLayout>


    </LinearLayout>

     <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divier" />

    <TextView
            android:padding="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bori_alg"
    />


</LinearLayout>
